//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post
  role Role [not null]
  Comment Comment
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Comment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  author User
  authorId String
  Workorder Workorder
  workorderId String
}

Table Workorder {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  imported Boolean
  orderID String [not null]
  accountID String [not null]
  accountName String [not null]
  address1 String
  refNumber String
  city String
  state String
  zip Int
  companyID String
  correction Int
  createdBy String
  createdOn DateTime
  dateCreated DateTime
  balanceDue Int
  grandTotal Int
  orderNumber Int [not null]
  orderType OrderType
  originalType OrderType
  postToAccounting Boolean
  salesRepID String
  siteID String
  subTotal Int
  taxID String
  taxRate Int
  taxTotal Int
  userName String
  merchantFeesTotal Int
  comments Comment
}

Enum OrderType {
  ESTIMATE
  INVOICE
  VOIDED
  WORKORER
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.authorId > User.id

Ref: Comment.authorId > User.id

Ref: Comment.workorderId > Workorder.id